Alteraçao no desing

--- a/styles/output.css
+++ b/styles/output.css
@@ -1971,7 +1971,7 @@ video {
 }
 
 .bg-home {
-  background-image: url('/assets/bg.png');
+  background-image: url('/assets/bg-hamburgueria.jpg');
 }
 
 .decoration-slice {
