--- a/styles/output.css
+++ b/styles/output.css
@@ -917,6 +917,12 @@ video {
   width: 100%;
 }
 
+.w-cep {
+  width: 75%;
+}
+
+
+
 .min-w-\[90\%\] {
   min-width: 90%;
 }
@@ -1943,6 +1949,11 @@ video {
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-blue-400 {
+  --tw-bg-opacity: 1; 
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
 }
 
 .bg-white {
